--- a/index.html
+++ b/index.html
@@ -50,9 +50,15 @@
   <section class="cover">
     <div class="overlay">
       <h1 class="cover__title">
-        <span class="aligned-text">Оно</span>
-        <span class="aligned-text aligned-text_center">вам</span>
-        <span class="aligned-text aligned-text_right">надо</span>
+        <span class="aligned-text">
+          Он<span class="last_button">о</span>
+        </span>
+        <span class="aligned-text aligned-text_center">
+          теб<span class="last_button">е</span>
+        </span>
+        <span class="aligned-text aligned-text_right">
+          над<span class="last_button">о</span>
+        </span>
       </h1>
       <div class="cover__description">
         <p class="cover__description-text">Аукцион вещей, вкоторые никто не верил</p>
@@ -60,76 +66,78 @@
       </div>
     </div>
   </section>
-  <section class="lots">
-    <h1 class="lots__heading">Лоты</h1>
-    <ul class="lots__card-list">
-      <li class="lots__card-list-item">
-        <a href="#" class="card-link">
-          <article class="card">
-            <header class="card__title">
-              Фильм режиссёра, который бросил киношколу
-            </header>
-            <p class="card__text">
-              Не просто бросил, а ушёл с первой лекции.
-              Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-            </p>
-          </article>
-        </a>
-      </li>
-      <li class="lots__card-list-item">
-        <a href="#" class="card-link">
-          <article class="card">
-            <header class="card__title">
-              Книга, где описан один скучный день из жизни рекламного агента
-            </header>
-            <p class="card__text">
-              Объёмом почти в тысячу страниц.
-              Иногда без знаков препинания и с переходами на древнеанглийский.
-              В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён.
-              И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
-            </p>
-          </article>
-        </a>
-      </li>
-      <li class="lots__card-list-item">
-        <a href="#" class="card-link">
-          <article class="card">
-            <header class="card__title">
-              Картина, которую повторит даже 5-летний сын маминой подруги
-            </header>
-            <p class="card__text">
-              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
-              Никаких полей, лесов, котиков...
-              Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
-            </p>
-          </article>
-        </a>
-      </li>
-    </ul>
-    <a class="lots__look-more-link">Посмотреть больше</a>
-  </section>
-  <section class="about">
-    <div class="about__column">
-      <div class="about__logo">
-        <img src="images/logo-black.svg" alt="Logo" class="about__logo-image">
+  <!--
+    <section class="lots">
+      <h1 class="lots__heading">Лоты</h1>
+      <ul class="lots__card-list">
+        <li class="lots__card-list-item">
+          <a href="#" class="card-link">
+            <article class="card">
+              <header class="card__title">
+                Фильм режиссёра, который бросил киношколу
+              </header>
+              <p class="card__text">
+                Не просто бросил, а ушёл с первой лекции.
+                Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              </p>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item">
+          <a href="#" class="card-link">
+            <article class="card">
+              <header class="card__title">
+                Книга, где описан один скучный день из жизни рекламного агента
+              </header>
+              <p class="card__text">
+                Объёмом почти в тысячу страниц.
+                Иногда без знаков препинания и с переходами на древнеанглийский.
+                В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён.
+                И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+              </p>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item">
+          <a href="#" class="card-link">
+            <article class="card">
+              <header class="card__title">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+              </header>
+              <p class="card__text">
+                Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
+                Никаких полей, лесов, котиков...
+                Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+              </p>
+            </article>
+          </a>
+        </li>
+      </ul>
+      <a class="lots__look-more-link">Посмотреть больше</a>
+    </section>
+    <section class="about">
+      <div class="about__column">
+        <div class="about__logo">
+          <img src="images/logo-black.svg" alt="Logo" class="about__logo-image">
+        </div>
+        <h2 class="about__title">Об аукционе</h2>
+        <div class="about__text">
+          <p>
+            Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
+            Наши лоты вообще не должны были попасть ни на один аукцион.
+            Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок?
+            Кому нужны все эти странные вещи, созданные любителями?
+          </p>
+          <p>
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
+            Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту
+            или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил
+            никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
+        </div>
       </div>
-      <h2 class="about__title">Об аукционе</h2>
-      <div class="about__text">
-        <p>
-          Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
-          Наши лоты вообще не должны были попасть ни на один аукцион.
-          Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок?
-          Кому нужны все эти странные вещи, созданные любителями?
-        </p>
-        <p>
-          Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
-          Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту
-          или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил
-          никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
-        </p>
-      </div>
-    </div>
-  </section>
+    </section>
+    -->
 </main>
 <footer class="footer">
   <div></div>
