--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
       </div>
     </div>
   </section>
-  <!--
-    <section class="lots">
-      <h1 class="lots__heading">Лоты</h1>
-      <ul class="lots__card-list">
-        <li class="lots__card-list-item">
+
+  <section class="lots">
+    <h1 class="lots__heading">Лоты</h1>
+    <ul class="lots__card-list">
+      <li class="lots__card-list-item card_type_film">
+        <div class="overlay">
           <a href="#" class="card-link">
             <article class="card">
               <header class="card__title">
@@ -82,62 +83,68 @@
               </p>
             </article>
           </a>
-        </li>
-        <li class="lots__card-list-item">
-          <a href="#" class="card-link">
-            <article class="card">
-              <header class="card__title">
-                Книга, где описан один скучный день из жизни рекламного агента
-              </header>
-              <p class="card__text">
-                Объёмом почти в тысячу страниц.
-                Иногда без знаков препинания и с переходами на древнеанглийский.
-                В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён.
-                И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
-              </p>
-            </article>
-          </a>
-        </li>
-        <li class="lots__card-list-item">
-          <a href="#" class="card-link">
-            <article class="card">
-              <header class="card__title">
-                Картина, которую повторит даже 5-летний сын маминой подруги
-              </header>
-              <p class="card__text">
-                Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
-                Никаких полей, лесов, котиков...
-                Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
-              </p>
-            </article>
-          </a>
-        </li>
-      </ul>
-      <a class="lots__look-more-link">Посмотреть больше</a>
-    </section>
-    <section class="about">
-      <div class="about__column">
-        <div class="about__logo">
-          <img src="images/logo-black.svg" alt="Logo" class="about__logo-image">
         </div>
-        <h2 class="about__title">Об аукционе</h2>
-        <div class="about__text">
-          <p>
-            Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
-            Наши лоты вообще не должны были попасть ни на один аукцион.
-            Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок?
-            Кому нужны все эти странные вещи, созданные любителями?
-          </p>
-          <p>
-            Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
-            Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту
-            или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил
-            никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
-          </p>
+      </li>
+      <li class="lots__card-list-item card_type_book">
+        <div class="overlay">
+        <a href="#" class="card-link">
+          <article class="card">
+            <header class="card__title">
+              Книга, где описан один скучный день из жизни рекламного агента
+            </header>
+            <p class="card__text">
+              Объёмом почти в тысячу страниц.
+              Иногда без знаков препинания и с переходами на древнеанглийский.
+              В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён.
+              И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+            </p>
+          </article>
+        </a>
         </div>
+      </li>
+      <li class="lots__card-list-item card_type_picture">
+        <div class="overlay">
+        <a href="#" class="card-link">
+          <article class="card">
+            <header class="card__title">
+              Картина, которую повторит даже 5-летний сын маминой подруги
+            </header>
+            <p class="card__text">
+              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
+              Никаких полей, лесов, котиков...
+              Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+            </p>
+          </article>
+        </a>
+        </div>
+      </li>
+    </ul>
+    <a class="lots__look-more-link">Посмотреть больше</a>
+  </section>
+  <!--
+  <section class="about">
+    <div class="about__column">
+      <div class="about__logo">
+        <img src="images/logo-black.svg" alt="Logo" class="about__logo-image">
       </div>
-    </section>
-    -->
+      <h2 class="about__title">Об аукционе</h2>
+      <div class="about__text">
+        <p>
+          Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
+          Наши лоты вообще не должны были попасть ни на один аукцион.
+          Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок?
+          Кому нужны все эти странные вещи, созданные любителями?
+        </p>
+        <p>
+          Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
+          Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту
+          или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил
+          никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+        </p>
+      </div>
+    </div>
+  </section>
+  -->
 </main>
 <footer class="footer">
   <div></div>
