--- a/index.html
+++ b/index.html
@@ -87,46 +87,52 @@
       </li>
       <li class="lots__card-list-item card_type_book">
         <div class="overlay">
-        <a href="#" class="card-link">
-          <article class="card">
-            <header class="card__title">
-              Книга, где описан один скучный день из жизни рекламного агента
-            </header>
-            <p class="card__text">
-              Объёмом почти в тысячу страниц.
-              Иногда без знаков препинания и с переходами на древнеанглийский.
-              В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён.
-              И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
-            </p>
-          </article>
-        </a>
+          <a href="#" class="card-link">
+            <article class="card">
+              <header class="card__title">
+                Книга, где описан один скучный день из жизни рекламного агента
+              </header>
+              <p class="card__text">
+                Объёмом почти в тысячу страниц.
+                Иногда без знаков препинания и с переходами на древнеанглийский.
+                В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных
+                времён.
+                И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+              </p>
+            </article>
+          </a>
         </div>
       </li>
       <li class="lots__card-list-item card_type_picture">
         <div class="overlay">
-        <a href="#" class="card-link">
-          <article class="card">
-            <header class="card__title">
-              Картина, которую повторит даже 5-летний сын маминой подруги
-            </header>
-            <p class="card__text">
-              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
-              Никаких полей, лесов, котиков...
-              Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
-            </p>
-          </article>
-        </a>
+          <a href="#" class="card-link">
+            <article class="card">
+              <header class="card__title">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+              </header>
+              <p class="card__text">
+                Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
+                Никаких полей, лесов, котиков...
+                Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+              </p>
+            </article>
+          </a>
         </div>
       </li>
     </ul>
     <a class="lots__look-more-link">Посмотреть больше</a>
   </section>
-  <!--
   <section class="about">
+    <div class="about__logo">
+      <img
+        src="images/logo-white.svg"
+        alt="Logo"
+        class="about__logo-image"
+        width="148px"
+        height="114px"
+      >
+    </div>
     <div class="about__column">
-      <div class="about__logo">
-        <img src="images/logo-black.svg" alt="Logo" class="about__logo-image">
-      </div>
       <h2 class="about__title">Об аукционе</h2>
       <div class="about__text">
         <p>
@@ -135,6 +141,7 @@
           Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок?
           Кому нужны все эти странные вещи, созданные любителями?
         </p>
+        <br>
         <p>
           Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
           Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту
@@ -144,10 +151,59 @@
       </div>
     </div>
   </section>
-  -->
 </main>
 <footer class="footer">
-  <div></div>
+  <div class="footer__contacts">
+    <a href="tel:+99995555555">+9 999 555 5555</a>
+    <br>
+    <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+    <br>
+    <address class="address">наб. Принсенграхт 263- 265, Амстердам</address>
+  </div>
+  <nav class="footer__menu">
+    <ul class="footer__menu-list">
+      <li class="footer__menu-list-item">
+        <a class="footer__menu-link_active">Главная</a>
+      </li>
+      <li class="footer__menu-list-item">
+        <a class="footer__menu-link">Посмотреть лоты</a>
+      </li>
+      <li class="footer__menu-list-item">
+        <a class="footer__menu-link">Об аукционе</a>
+      </li>
+    </ul>
+  </nav>
+  <div>
+    <ul class="footer__social-list">
+      <li class="footer__social-list-item">
+        <a class="footer__social-link">
+          <img
+            class="footer__social-icon"
+            alt="social"
+            src="images/yt.svg"
+          >
+        </a>
+      </li>
+      <li class="footer__social-list-item">
+        <a class="footer__social-link">
+          <img
+            class="footer__social-icon"
+            alt="social"
+            src="images/vk.svg"
+          >
+        </a>
+      </li>
+      <li class="footer__social-list-item">
+        <a class="footer__social-link">
+          <img
+            class="footer__social-icon"
+            alt="social"
+            src="images/pinterest.svg"
+          >
+        </a>
+      </li>
+    </ul>
+  </div>
 </footer>
 </body>
 </html>
