--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     <div class="overlay">
       <h1 class="cover__title">
         <span class="aligned-text">
-          Он<span class="last_button">о</span>
+          Он<span class="outcast">о</span>
         </span>
         <span class="aligned-text aligned-text_center">
-          теб<span class="last_button">е</span>
+          теб<span class="outcast">е</span>
         </span>
         <span class="aligned-text aligned-text_right">
-          над<span class="last_button">о</span>
+          н<span class="outcast">адо</span>
         </span>
       </h1>
       <div class="cover__description">
