--- a/index.html
+++ b/index.html
@@ -163,20 +163,20 @@
   <nav class="footer__menu">
     <ul class="footer__menu-list">
       <li class="footer__menu-list-item">
-        <a class="footer__menu-link_active">Главная</a>
+        <a class="footer__menu-link_active" href="#">Главная</a>
       </li>
       <li class="footer__menu-list-item">
-        <a class="footer__menu-link">Посмотреть лоты</a>
+        <a class="footer__menu-link" href="#">Посмотреть лоты</a>
       </li>
       <li class="footer__menu-list-item">
-        <a class="footer__menu-link">Об аукционе</a>
+        <a class="footer__menu-link" href="#">Об аукционе</a>
       </li>
     </ul>
   </nav>
   <div>
     <ul class="footer__social-list">
       <li class="footer__social-list-item">
-        <a class="footer__social-link">
+        <a class="footer__social-link" href="#">
           <img
             class="footer__social-icon"
             alt="social"
@@ -185,7 +185,7 @@
         </a>
       </li>
       <li class="footer__social-list-item">
-        <a class="footer__social-link">
+        <a class="footer__social-link" href="#">
           <img
             class="footer__social-icon"
             alt="social"
@@ -194,7 +194,7 @@
         </a>
       </li>
       <li class="footer__social-list-item">
-        <a class="footer__social-link">
+        <a class="footer__social-link" href="#">
           <img
             class="footer__social-icon"
             alt="social"
