--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
   </nav>
   <div class="header__logo">
     <a>
-      <!-- TODO: сделать ссылку блочной и задать размеры -->
       <img
         src="images/logo-black.svg"
         alt="Оно тебе надо"
@@ -126,7 +125,7 @@
     <div class="about__logo">
       <img
         src="images/logo-white.svg"
-        alt="Logo"
+        alt="Оно тебе надо"
         class="about__logo-image"
         width="148px"
         height="114px"
@@ -179,7 +178,7 @@
         <a class="footer__social-link" href="#">
           <img
             class="footer__social-icon"
-            alt="social"
+            alt="YouTube"
             src="images/yt.svg"
           >
         </a>
@@ -188,7 +187,7 @@
         <a class="footer__social-link" href="#">
           <img
             class="footer__social-icon"
-            alt="social"
+            alt="VK"
             src="images/vk.svg"
           >
         </a>
@@ -197,7 +196,7 @@
         <a class="footer__social-link" href="#">
           <img
             class="footer__social-icon"
-            alt="social"
+            alt="Pinterest"
             src="images/pinterest.svg"
           >
         </a>
