--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   <nav class="footer__menu">
     <ul class="footer__menu-list">
       <li class="footer__menu-list-item">
-        <a class="footer__menu-link_active" href="#">Главная</a>
+        <a class="footer__menu-link footer__menu-link_active" href="#">Главная</a>
       </li>
       <li class="footer__menu-list-item">
         <a class="footer__menu-link" href="#">Посмотреть лоты</a>
