Сделал пути относительными

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
   <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
 
-  <link rel="stylesheet" href="/fonts/fonts.css"/>
-  <link rel="stylesheet" href="/styles/global.css"/>
-  <link rel="stylesheet" href="/styles/style.css"/>
+  <link rel="stylesheet" href="./fonts/fonts.css"/>
+  <link rel="stylesheet" href="./styles/global.css"/>
+  <link rel="stylesheet" href="./styles/style.css"/>
 </head>
 <body>
 <header class="header">
@@ -29,7 +29,7 @@
   <div class="header__logo">
     <a>
       <img
-        src="images/logo-black.svg"
+        src="./images/logo-black.svg"
         alt="Оно тебе надо"
         height="105px"
         width="auto"
@@ -124,7 +124,7 @@
   <section class="about">
     <div class="about__logo">
       <img
-        src="images/logo-white.svg"
+        src="./images/logo-white.svg"
         alt="Оно тебе надо"
         class="about__logo-image"
         width="148px"
@@ -178,7 +178,7 @@
         <img
           class="footer__social-icon"
           alt="YouTube"
-          src="images/yt.svg"
+          src="./images/yt.svg"
         >
       </a>
     </li>
@@ -187,7 +187,7 @@
         <img
           class="footer__social-icon"
           alt="VK"
-          src="images/vk.svg"
+          src="./images/vk.svg"
         >
       </a>
     </li>
@@ -196,7 +196,7 @@
         <img
           class="footer__social-icon"
           alt="Pinterest"
-          src="images/pinterest.svg"
+          src="./images/pinterest.svg"
         >
       </a>
     </li>
