Исправил передачу размеров лого

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     <img
       src="./images/logo-black.svg"
       alt="Оно тебе надо"
-      height="105px"
-      width="auto"
+      height="105"
       class="header__logo-image"
     >
   </a>
@@ -125,8 +124,8 @@
         src="./images/logo-white.svg"
         alt="Оно тебе надо"
         class="about__logo-image"
-        width="148px"
-        height="114px"
+        width="148"
+        height="114"
       >
     </div>
     <div class="about__column">
