Исправил разметку address

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       class="header__logo-image"
     >
   </a>
-  <div class="contacts">
+  <address class="address header__address">
     <a href="tel:+99995555555">+9 999 555 5555</a>
     <br>
     <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
     <br>
-    <address class="address">наб. Принсенграхт 263- 265, Амстердам</address>
-  </div>
+    <p class="address">наб. Принсенграхт 263- 265, Амстердам</p>
+  </address>
 </header>
 <main class="main">
   <section class="cover">
@@ -149,13 +149,13 @@
   </section>
 </main>
 <footer class="footer">
-  <div class="footer__contacts">
+  <address class="address">
     <a href="tel:+99995555555">+9 999 555 5555</a>
     <br>
     <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
     <br>
-    <address class="address">наб. Принсенграхт 263- 265, Амстердам</address>
-  </div>
+    <p>наб. Принсенграхт 263- 265, Амстердам</p>
+  </address>
   <nav class="footer__menu">
     <ul class="footer__menu-list">
       <li class="footer__menu-list-item">
