Перенёс фон в свойство статьи

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
   <section class="lots">
     <h2 class="lots__heading">Лоты</h2>
     <ul class="lots__card-list">
-      <li class="lots__card-list-item card_type_film">
+      <li class="lots__card-list-item">
         <div class="overlay">
           <a href="#" class="card-link">
-            <article class="card">
+            <article class="card card_type_film">
               <header class="card__title">
                 Фильм режиссёра, который бросил киношколу
               </header>
@@ -81,10 +81,10 @@
           </a>
         </div>
       </li>
-      <li class="lots__card-list-item card_type_book">
+      <li class="lots__card-list-item">
         <div class="overlay">
           <a href="#" class="card-link">
-            <article class="card">
+            <article class="card card_type_book">
               <header class="card__title">
                 Книга, где описан один скучный день из жизни рекламного агента
               </header>
@@ -99,10 +99,10 @@
           </a>
         </div>
       </li>
-      <li class="lots__card-list-item card_type_picture">
+      <li class="lots__card-list-item">
         <div class="overlay">
           <a href="#" class="card-link">
-            <article class="card">
+            <article class="card card_type_picture">
               <header class="card__title">
                 Картина, которую повторит даже 5-летний сын маминой подруги
               </header>
