Заменён тег header в статье

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <div class="overlay">
           <a href="#" class="card-link">
             <article class="card card_type_film">
-              <header class="card__title">
+              <h3 class="card__title">
                 Фильм режиссёра, который бросил киношколу
-              </header>
+              </h3>
               <p class="card__text">
                 Не просто бросил, а ушёл с первой лекции.
                 Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
@@ -85,9 +85,9 @@
         <div class="overlay">
           <a href="#" class="card-link">
             <article class="card card_type_book">
-              <header class="card__title">
+              <h3 class="card__title">
                 Книга, где описан один скучный день из жизни рекламного агента
-              </header>
+              </h3>
               <p class="card__text">
                 Объёмом почти в тысячу страниц.
                 Иногда без знаков препинания и с переходами на древнеанглийский.
@@ -103,9 +103,9 @@
         <div class="overlay">
           <a href="#" class="card-link">
             <article class="card card_type_picture">
-              <header class="card__title">
+              <h3 class="card__title">
                 Картина, которую повторит даже 5-летний сын маминой подруги
-              </header>
+              </h3>
               <p class="card__text">
                 Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
                 Никаких полей, лесов, котиков...
