Добавлен адрес в "Посмотреть больше"

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
       </li>
     </ul>
-    <a class="lots__look-more-link">Посмотреть больше</a>
+    <a class="lots__look-more-link" href="#">Посмотреть больше</a>
   </section>
   <section class="about">
     <div class="about__logo">
