Улучшена разбивка стилей для заголовка

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
   <section class="cover">
     <div class="overlay"></div>
     <h1 class="cover__title">
-        <span class="aligned-text aligned-text_regular-spacing">
-          О<span class="aligned-text_shifted-spacing">но</span>
+        <span class="aligned-text aligned-text_shifted-line-height">
+          О<span class="letter-spacing-extended">но</span>
         </span>
-      <span class="aligned-text aligned-text_center aligned-text_regular-spacing">
-          те<span class="aligned-text_shifted-spacing">бе</span>
+      <span class="aligned-text aligned-text_center">
+          те<span class="letter-spacing-extended">бе</span>
         </span>
-      <span class="aligned-text aligned-text_right aligned-text_shifted-spacing">
-          н<span class="aligned-text_regular-spacing">ад</span>о
-        </span>
+      <span class="aligned-text aligned-text_right">
+          <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+      </span>
     </h1>
     <div class="cover__description">
       <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
