--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     >
   </a>
   <address class="address header__address">
-    <a href="tel:+99995555555">+9 999 555 5555</a>
+    <a href="tel:+99995555555" class="header__link">+9 999 555 5555</a>
     <br>
-    <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+    <a href="mailto:info@sobaka.ge" class="header__link">info@sobaka.ge</a>
     <br>
-    <p class="address">наб. Принсенграхт 263- 265, Амстердам</p>
+    <p class="address__text">наб. Принсенграхт 263- 265, Амстердам</p>
   </address>
 </header>
 <main class="main">
@@ -150,7 +150,7 @@
     <br>
     <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
     <br>
-    <p>наб. Принсенграхт 263- 265, Амстердам</p>
+    <p class="address__text">наб. Принсенграхт 263- 265, Амстердам</p>
   </address>
   <nav class="footer__menu">
     <ul class="footer__menu-list">
