--- a/index.html
+++ b/index.html
@@ -47,17 +47,19 @@
     <div class="overlay"></div>
     <h1 class="cover__title">
         <span class="aligned-text aligned-text_shifted-line-height">
-          О<span class="letter-spacing-extended">но</span>
+          О<span class="letter-spacing-extended-high">но</span>
         </span>
       <span class="aligned-text aligned-text_center">
-          те<span class="letter-spacing-extended">бе</span>
+          те<span class="letter-spacing-extended-high">бе</span>
         </span>
       <span class="aligned-text aligned-text_right">
-          <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+          <span class="letter-spacing-extended-high">н</span>ад<span class="no-letter-spacing">о</span>
       </span>
     </h1>
     <div class="cover__description">
-      <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+      <p class="cover__description-text no-letter-spacing">
+        Аукцион<span class="letter-spacing-extended-light"> </span>вещей,<span class="letter-spacing-extended-medium"> </span><span class="letter-spacing-reduced">в</span><span class="word-spacing-extended">которые никто не верил</span>
+      </p>
       <button class="bet-button" type="button">Сделать ставку</button>
     </div>
 
