--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </h3>
             <p class="card__text">
               Не просто бросил, а ушёл с первой лекции.
-              Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              Какой была бы ваша ставка, если бы вы не знали, что режиссёр <span class="dash">—</span> Пол Томас Андерсон?
             </p>
           </article>
         </a>
@@ -108,8 +108,8 @@
             </h3>
             <p class="card__text">
               Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
-              Никаких полей, лесов, котиков...
-              Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+              Никаких полей, лесов, котиков<span class="ellipsis">...</span>
+              Сколько бы вы на такое поставили, если бы не знали, что это <span class="dash">—</span> одна из революционных работ Кандинского?
             </p>
           </article>
         </a>
