--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
     </h1>
     <div class="cover__description">
       <p class="cover__description-text no-letter-spacing">
-        Аукцион<span class="letter-spacing-extended-light"> </span>вещей,<span class="letter-spacing-extended-medium"> </span><span class="letter-spacing-reduced">в</span><span class="word-spacing-extended">которые никто не верил</span>
+        Аукцион<span class="letter-spacing-extended-light"> </span>вещей,<span
+        class="letter-spacing-extended-medium"> </span><span class="letter-spacing-reduced">в</span><span
+        class="word-spacing-extended">которые никто не верил</span>
       </p>
       <button class="bet-button" type="button">Сделать ставку</button>
     </div>
@@ -77,7 +79,8 @@
             </h3>
             <p class="card__text">
               Не просто бросил, а ушёл с первой лекции.
-              Какой была бы ваша ставка, если бы вы не знали, что режиссёр <span class="dash">—</span> Пол Томас Андерсон?
+              Какой была бы ваша ставка, если бы вы не знали, что режиссёр <span class="dash">—</span> Пол Томас
+              Андерсон?
             </p>
           </article>
         </a>
@@ -109,7 +112,8 @@
             <p class="card__text">
               Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
               Никаких полей, лесов, котиков<span class="ellipsis">...</span>
-              Сколько бы вы на такое поставили, если бы не знали, что это <span class="dash">—</span> одна из революционных работ Кандинского?
+              Сколько бы вы на такое поставили, если бы не знали, что это <span class="dash">—</span> одна из
+              революционных работ Кандинского?
             </p>
           </article>
         </a>
@@ -118,29 +122,42 @@
     <a class="lots__look-more-link" href="#">Посмотреть больше</a>
   </section>
   <section class="about">
-    <div class="about__logo">
-      <img
-        src="./images/logo-white.svg"
-        alt="Оно тебе надо"
-        class="about__logo-image"
-        width="148"
-        height="114"
-      >
+    <div class="card">
+      <!-- С карточкой – это просто гениально! Я в восторге! Низкий поклон тому, кто это придумал! -->
+      <div class="about__logo">
+        <img
+          src="./images/logo-white.svg"
+          alt="Оно тебе надо"
+          class="about__logo-image"
+          width="148"
+          height="114"
+        >
+      </div>
     </div>
     <div class="about__column">
       <h2 class="about__title">Об аукционе</h2>
       <div class="about__text">
+        <!-- Мягко говоря: утомился здесь.-->
         <p>
-          Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
-          Наши лоты вообще не должны были попасть ни на один аукцион.
-          Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок?
-          Кому нужны все эти странные вещи, созданные любителями?
+          Здесь вы не встретите очередное
+          <span class="no-letter-spacing">пафосное собрание невероятно дорогого антиквариата.</span>
+          <span style="letter-spacing: 0.02em;">Наши</span>
+          лоты вообще не должны
+          <span style="letter-spacing: -0.01em;">были попасть</span>
+          ни на
+          <span style="word-spacing: -0.05em">один аукцион. Потому что кому нужен
+          <span style="letter-spacing: 0.03em;">дневник</span>
+          девочки-подростка или картина, которую может нарисовать даже ребёнок?</span>
+          <span style="word-spacing: -0.02em">Кому нужны все эти странные вещи, созданные любителями?</span>
         </p>
-        <p>
-          Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
-          Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту
-          или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил
-          никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+        <p style="word-spacing: -0.08em">
+          Слишком сложные или, наоборот, слишком простые. Опережающие своё <span style="word-spacing: -0.04em;">время.
+          В пух и прах растерзанные</span> критиками.
+          Непринятые и непонятые. Когда-то <span style="letter-spacing: 0.04em;">они</span> казались просто
+          <span style="word-spacing: -0.09em">
+          <span style="letter-spacing: 0.03em">неудачными.</span> Но, несмотря</span> на критику, кажущуюся простоту
+          или сложность, сейчас без этих лотов невозможно <span style="word-spacing: -0.02em">представить современную культуру. Когда в эти вещи не</span>
+          верил никто, продолжали верить <span style="word-spacing: -0.01em">их создатели. И сейчас эти лоты стали культовыми.</span>
         </p>
       </div>
     </div>
