--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
   <nav class="header__menu">
     <ul class="header__links-list">
       <li class="header__links-list-item header__links-list-item_no-bullet">
-        <a href="#" class="header__link header__link_active">Главная</a>
+        <a href="#" class="underline_disabled">Главная</a>
       </li>
       <li class="header__links-list-item">
-        <a href="#" class="header__link">Посмотреть лоты</a>
+        <a href="#">Посмотреть лоты</a>
       </li>
       <li class="header__links-list-item">
-        <a href="#" class="header__link">Об аукционе</a>
+        <a href="#">Об аукционе</a>
       </li>
     </ul>
   </nav>
-  <a>
+  <a class="underline_disabled">
     <img
       src="./images/logo-black.svg"
       alt="Оно тебе надо"
@@ -35,9 +35,9 @@
     >
   </a>
   <address class="address header__address">
-    <a href="tel:+99995555555" class="header__link">+9 999 555 5555</a>
+    <a href="tel:+99995555555">+9 999 555 5555</a>
     <br>
-    <a href="mailto:info@sobaka.ge" class="header__link">info@sobaka.ge</a>
+    <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
     <br>
     <p class="address__text">наб. Принсенграхт 263- 265, Амстердам</p>
   </address>
@@ -137,7 +137,15 @@
     <div class="about__column">
       <h2 class="about__title">Об аукционе</h2>
       <div class="about__text">
-        <!-- Мягко говоря: утомился здесь.-->
+        <!-- Мягко говоря: утомился здесь.
+
+        Если с letter-spacing понятно - в figma прям влоб написано какое слово и как.
+        То с word-spacing не понимаю как правильно определять.
+
+        Особая проблема - нейминг. Сначала начал классы на каждый случай делать.
+        Когда вариации перевалили за 5 и устал сочинять названия – показалось проще вбить изыски дизайна влоб.
+        Иначе, когда мне надо сделать аккурат 0.03 - пытаюсь вспоминать какой именно класс нужен для значения.
+        -->
         <p>
           Здесь вы не встретите очередное
           <span class="no-letter-spacing">пафосное собрание невероятно дорогого антиквариата.</span>
@@ -164,7 +172,7 @@
   </section>
 </main>
 <footer class="footer">
-  <address class="address">
+  <address class="address footer__address">
     <a href="tel:+99995555555">+9 999 555 5555</a>
     <br>
     <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
@@ -174,19 +182,19 @@
   <nav class="footer__menu">
     <ul class="footer__menu-list">
       <li class="footer__menu-list-item">
-        <a class="footer__menu-link footer__menu-link_active" href="#">Главная</a>
+        <a class="underline_disabled" href="#">Главная</a>
       </li>
       <li class="footer__menu-list-item">
-        <a class="footer__menu-link" href="#">Посмотреть лоты</a>
+        <a href="#">Посмотреть лоты</a>
       </li>
       <li class="footer__menu-list-item">
-        <a class="footer__menu-link" href="#">Об аукционе</a>
+        <a href="#">Об аукционе</a>
       </li>
     </ul>
   </nav>
   <ul class="footer__social-list">
     <li class="footer__social-list-item">
-      <a class="footer__social-link" href="#">
+      <a class="footer__social-link underline_disabled" href="#">
         <img
           class="footer__social-icon"
           alt="YouTube"
@@ -195,7 +203,7 @@
       </a>
     </li>
     <li class="footer__social-list-item">
-      <a class="footer__social-link" href="#">
+      <a class="footer__social-link underline_disabled" href="#">
         <img
           class="footer__social-icon"
           alt="VK"
@@ -204,7 +212,7 @@
       </a>
     </li>
     <li class="footer__social-list-item">
-      <a class="footer__social-link" href="#">
+      <a class="footer__social-link underline_disabled" href="#">
         <img
           class="footer__social-icon"
           alt="Pinterest"
