Удалены лишние span из cover

--- a/index.html
+++ b/index.html
@@ -57,10 +57,8 @@
       </span>
     </h1>
     <div class="cover__description">
-      <p class="cover__description-text no-letter-spacing">
-        Аукцион<span class="letter-spacing-extended-light"> </span>вещей,<span
-        class="letter-spacing-extended-medium"> </span><span class="letter-spacing-reduced">в</span><span
-        class="word-spacing-extended">которые никто не верил</span>
+      <p class="cover__description-text word-spacing-extended-light">
+        Аукцион вещей, в которые никто <span class="word-spacing-extended">не верил</span>
       </p>
       <button class="bet-button" type="button">Сделать ставку</button>
     </div>
