--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
     <div class="overlay"></div>
     <h1 class="cover__title">
         <span class="aligned-text aligned-text_shifted-line-height">
-          О<span class="letter-spacing-extended-high">но</span>
+          О<span class="letter-spacing-extended">но</span>
         </span>
       <span class="aligned-text aligned-text_center">
-          те<span class="letter-spacing-extended-high">бе</span>
+          те<span class="letter-spacing-extended">бе</span>
         </span>
       <span class="aligned-text aligned-text_right">
-          <span class="letter-spacing-extended-high">н</span>ад<span class="no-letter-spacing">о</span>
+          <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
       </span>
     </h1>
     <div class="cover__description">
-      <p class="cover__description-text word-spacing-extended-light">
-        Аукцион вещей, в которые никто <span class="word-spacing-extended">не верил</span>
+      <p class="cover__description-text word-spacing-extended-xxl">
+        Аукцион вещей, в которые никто <span class="word-spacing-extended-xl">не верил</span>
       </p>
       <button class="bet-button" type="button">Сделать ставку</button>
     </div>
@@ -132,35 +132,20 @@
     <div class="about__column">
       <h2 class="about__title">Об аукционе</h2>
       <div class="about__text">
-        <!-- Мягко говоря: утомился здесь.
-
-        Если с letter-spacing понятно - в figma прям влоб написано какое слово и как.
-        То с word-spacing не понимаю как правильно определять.
-
-        Особая проблема - нейминг. Сначала начал классы на каждый случай делать.
-        Когда вариации перевалили за 5 и устал сочинять названия – показалось проще вбить изыски дизайна влоб.
-        Иначе, когда мне надо сделать аккурат 0.03 - пытаюсь вспоминать какой именно класс нужен для значения.
-        -->
         <p>
-          Здесь вы не встретите очередное
-          <span class="no-letter-spacing">пафосное собрание невероятно дорогого антиквариата.</span>
-          <span style="letter-spacing: 0.02em;">Наши</span>
-          лоты вообще не должны
-          <span style="letter-spacing: -0.01em;">были попасть</span>
-          ни на
-          <span style="word-spacing: -0.05em">один аукцион. Потому что кому нужен
-          <span style="letter-spacing: 0.03em;">дневник</span>
-          девочки-подростка или картина, которую может нарисовать даже ребёнок?</span>
-          <span style="word-spacing: -0.02em">Кому нужны все эти странные вещи, созданные любителями?</span>
+          Здесь вы не встретите очередное <span class="no-letter-spacing">пафосное собрание невероятно дорогого антиквариата.</span>
+          Наши лоты вообще не должны были попасть ни на один аукцион.
+          Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок?
+          Кому нужны все эти странные вещи, созданные любителями?
         </p>
-        <p style="word-spacing: -0.08em">
-          Слишком сложные или, наоборот, слишком простые. Опережающие своё <span style="word-spacing: -0.04em;">время.
-          В пух и прах растерзанные</span> критиками.
-          Непринятые и непонятые. Когда-то <span style="letter-spacing: 0.04em;">они</span> казались просто
-          <span style="word-spacing: -0.09em">
-          <span style="letter-spacing: 0.03em">неудачными.</span> Но, несмотря</span> на критику, кажущуюся простоту
-          или сложность, сейчас без этих лотов невозможно <span style="word-spacing: -0.02em">представить современную культуру. Когда в эти вещи не</span>
-          верил никто, продолжали верить <span style="word-spacing: -0.01em">их создатели. И сейчас эти лоты стали культовыми.</span>
+        <p class="word-spacing-reduced">
+          Слишком сложные или, наоборот, слишком простые. Опережающие своё время.
+          В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными.
+          <span class="word-spacing-extended-s">Но, несмотря на</span> критику, кажущуюся простоту или сложность,
+          сейчас без этих лотов невозможно представить
+          <span class="word-spacing-extended-s">современную культуру</span>. Когда в эти вещи не верил никто, продолжали
+          верить их
+          <span class="word-spacing-extended-s">создатели. И</span> сейчас эти лоты стали культовыми.
         </p>
       </div>
     </div>
